--- a/src/component/style.css
+++ b/src/component/style.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
+/* @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap'); */
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Source Sans Pro", sans-serif;
+  /* font-family: "Pacifico", sans-serif; */
 }
 
 html {
@@ -16,12 +18,11 @@ html {
   background: #b0b5f5;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
 }
 
 .child-div {
   text-align: center;
-  margin-top: 12rem;
+  margin-top: 10rem;
 }
 
 .child-div figure img {
@@ -30,14 +31,14 @@ html {
 }
 
 .child-div figure figcaption {
-  color: #fff;
+  color: #000;
+  font-weight: bolder;
   font-size: 2.2rem;
   padding-top: 2rem;
   text-transform: capitalize;
 }
 
 input {
-  /* display: block; */
   min-width: 40rem;
   height: 5rem;
   padding: 2rem 1.2rem;
@@ -49,7 +50,7 @@ input {
   background-color: #fff;
   background-image: none;
   border: 0.1rem solid #ccc;
-  border-radius: 0.4rem;
+  border-radius: 4rem;
   -webkit-box-shadow: inset 0 0.1rem 0.1rem rgb(0 0 0 / 8%);
   box-shadow: inset 0 0.1rem 0.1rem rgb(0 0 0 / 8%);
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
@@ -73,9 +74,7 @@ input:focus {
   -webkit-box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.2);
 }
-/* input :placeholder-shown {
-  color: #a82727;
-} */
+
 
 .todo-btn {
   width: 5rem;
@@ -87,12 +86,9 @@ input:focus {
   margin-top: -10px;
 }
 .fa {
-  /* margin-left: 38px; */
   cursor: pointer;
   pointer-events: auto;
   z-index: 999;
-  /* background-color: #fff; */
-  /* background-image: none; */
   color: #020202;
   -webkit-transition: color 0.15s linear;
   transition: color 0.15s linear;
@@ -108,19 +104,18 @@ input:focus {
 }
 
 .showItems {
-  /* margin-top: 3rem; */
   text-align: center;
 }
 
 .eachItem {
   background: #fff;
   padding: 1.2rem 1rem;
-  border-radius: 0.5rem;
+  border-radius: 4rem;
   margin-bottom: 0.7rem;
   margin-left: 1rem;
   min-width: 40rem;
   word-break: break-word;
-  background: rgb(85, 41, 220);
+  background: rgb(136, 219, 252);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -133,17 +128,29 @@ input:focus {
 
 .showItems .eachItem h3 {
   padding-left: 1rem;
-  font-size: 1.6rem;
-  color: #fff;
+  font-weight: bolder;
+  font-size: 2rem;
+  color: #000;
 }
 
-.fa-trash-alt,
+.fa-trash-alt{
+  margin-left: -2.5rem;
+  cursor: pointer;
+  pointer-events: auto;
+  z-index: 10;
+  font-weight: bolder;
+  color: rgb(218, 18, 18);
+  -webkit-transition: color 0.15s linear;
+  transition: color 0.15s linear;
+  font-size: 2rem;
+}
 .fa-edit {
   margin-left: -2.5rem;
   cursor: pointer;
   pointer-events: auto;
   z-index: 10;
-  color: rgb(251, 251, 251);
+  color: rgb(49, 122, 18);
+  font-weight: bolder;
   -webkit-transition: color 0.15s linear;
   transition: color 0.15s linear;
   font-size: 2rem;
@@ -168,14 +175,16 @@ input:focus {
 }
 
 .eachItem:hover h3 {
-  color: rgb(85, 41, 220);
+  color: #000;
 }
 
 .btn {
   letter-spacing: 0.1rem;
   cursor: pointer;
   font-size: 14px;
-  font-weight: 400;
+  border: none;
+  border-radius: 4rem;
+  font-weight: bolder;
   line-height: 45px;
   max-width: 160px;
   position: relative;
@@ -188,10 +197,12 @@ input:focus {
 }
 
 .effect04 {
-  --uismLinkDisplay: var(--smLinkDisplay, inline-flex);
-  display: var(--uismLinkDisplay);
+  /* --uismLinkDisplay: var(--smLinkDisplay, inline-flex); */
+  /* display: var(--uismLinkDisplay); */
   color: #000;
-  outline: solid 2px #000;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  /* outline: solid 2px #000; */
   position: relative;
   transition-duration: 0.4s;
   overflow: hidden;
@@ -205,7 +216,7 @@ input:focus {
 }
 
 .effect04:hover {
-  background-color: rgb(85, 41, 220);
+  background-color: rgb(136, 219, 252);
 }
 
 .effect04:hover span {
